# ClaraN

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: lint.yml  publish.yml  publish_android.yml  publish_android.yml.bak
apps/clara-n/: README.md  package.json  vite.config.ts
apps/clara-n/adapters/static/: vite.config.ts
apps/clara-n/public/: manifest.json
apps/clara-n/src/: entry.ssr.tsx  global.css
apps/clara-n/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/clara-n/src-tauri/capabilities/: default.json
apps/clara-n/src-tauri/src/: lib.rs
apps/clara-n/src-tauri/src/app_updates/: checker.rs  mod.rs  pending_update.rs  updater.rs
apps/clara-n/src-tauri/src/commands/: ollama.rs
apps/clara-n/src-tauri/src/providers/: ollama.rs
apps/clara-n/src/components/ClaraAssistant/: index.tsx
apps/clara-n/src/components/MainChatArea/: ChatContentArea.tsx  ChatInput.tsx  Header.tsx  QuestionRenderer.tsx  TopBar.tsx  index.tsx  types.ts
apps/clara-n/src/components/SideBar/: ChatHistory.tsx  Logo.tsx  Options.tsx  index.tsx  types.ts
apps/clara-n/src/locales/: message.de.json  message.en.json
apps/clara-n/src/locales/consts/: locale.ts
apps/clara-n/src/routes/: i18n-utils.ts  index.tsx  layout.tsx
apps/clara-n/src/routes/[locale]/: i18n-utils.ts  index.tsx  layout.tsx
apps/clara-versen/: package.json
apps/clara-versen/src/: global.css  root.tsx
apps/clara-versen/src-tauri/: tauri.conf.json
apps/clara-versen/src/components/ClaraAssistant/: index.tsx
apps/clara-versen/src/components/MainChatArea/: ChatInput.tsx  index.tsx
apps/clara-versen/src/components/SideBar/: Logo.tsx
apps/clara-versen/src/routes/: index.tsx  layout.tsx
assets/arch/: scenarios.fossflow.json
(+10 files in other folders)
