[package]
name = "ClaraN"
version = "0.1.1"
description = "Your fully local AI Superstack - Privacy-First, On-Premises, Limitless"
authors = ["Van Vuong Ngo"]
license = "MIT"
repository = "https://github.com/vanvuongngo/ClaraN.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
