[package]
name = "ClaraN"
version = "0.0.0"
description = "Your fully local AI Superstack - Privacy-First, On-Premises, Limitless"
authors = ["Van Vuong Ngo"]
license = "MIT"
repository = "https://github.com/vanvuongngo/ClaraN.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
log = "0.4"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.143"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2.6"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-opener = "2.5.0"
thiserror = "2.0.16"
tauri-plugin-os = "2.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9"
